--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 		
 	</main>
 	<footer>
-		<p>&copy;2018, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
+		<p>&copyBlanca Rosario 11/15/2021; 2018, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
 	</footer>
 </body>
 </html>
